feat: user settings & history
